# demo_rs

./: Cargo.toml  Dockerfile  Makefile
src/: main.rs
