[package]
name = "demo_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
clap = { version = "4.1.6", features = ["derive"] }
tokio = { version = "1.43.1", features = ["full"] }
tower-http = {version = "0.6.1", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.20" }